[package]
name = "extended-collections"
version = "0.3.1"
authors = ["Jeffrey Xiao <jeffrey.xiao1998@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/jeffrey-xiao/extended-collections-rs"
documentation = "https://docs.rs/extended-collections"
description = """
An extension to the collections in the standard library with various data structures.
"""
categories = ["algorithms", "data-structures"]
keywords = ["collections", "data-structures"]
include = ["src/**/*", "Cargo.toml"]

[badges]
travis-ci = { repository = "jeffrey-xiao/extended-collections-rs", branch = "master" }
codecov = { repository = "jeffrey-xiao/extended-collections-rs", service = "github" }

[dependencies]
byteorder = "1"
bincode = "1.0"
crossbeam-epoch = "0.2"
siphasher = "0.2"
serde = { version = "1.0", features = ["rc"] }
serde_derive = "1.0"
rand = "0.4"

[dev-dependencies]
serde_test = "1.0"
